semi_project - 전체 수정

--- a/semi_project/_template/allerman.html
+++ b/semi_project/_template/allerman.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="plugins/superslides/stylesheets/superslides.css">
     <link rel="stylesheet" href="plugins/youcover/youCover.css">
     <link rel="stylesheet" href="plugins/aos/aos.css">
+   
+<style type="text/css">
+    .slides-pagination{
+        bottom: 15px !important;
+    }
+</style>
 </head>
 <body>
 <!--{#topbar}-->
@@ -182,12 +188,18 @@
     </div>
 </div>
 <!--{#footer}-->
-    <script src="../plugins/superslides/jquery.easing.1.3.js"></script>
-    <script src="../plugins/superslides/jquery.superslides.min.js"></script>
+    <script src="plugins/superslides/jquery.easing.1.3.js"></script>
+    <script src="plugins/superslides/jquery.superslides.min.js"></script>
      <!-- 플러그인 JS 참조 (유튜브 동영상)-->
-    <script src='../plugins/youcover/youCover.js'></script>
-    <script src='../plugins/aos/aos.js'></script>
+    <script src='plugins/youcover/youCover.js'></script>
+    <script src='plugins/aos/aos.js'></script>
     <script src='js/script.js'></script>
-   
+<!--{? is_popup == 'N'}-->
+<script>
+    $(function(){
+        var popup = window.open("popup.php", "popup", "width=450,height=450");
+    }); 
+</script>
+<!--{/}-->
 </body>
 </html>
