semi_project - 이벤트 페이지 작성

--- a/semi_project/_template/common/topbar.html
+++ b/semi_project/_template/common/topbar.html
@@ -4,7 +4,7 @@
         <ul class="r_btn" style="text-align: right;">
             <li class="lnb_line"><a href="{home_url}/login.php" class="r_btn_a">로그인</a></li>
             <li class="lnb_line"><a href="{home_url}/register.php" class="r_btn_a">회원가입</a></li>
-            <li class="lnb_line"><a href="{home_url}/list.php?bbs_type=qna" class="r_btn_a">고객센터</a></li>
+            <li class="lnb_line"><a href="{home_url}/list.php?bbs_type=event" class="r_btn_a">이벤트</a></li>
         </ul>
         <form action="#" name="frm" method="post" class="frm clearfix">
             <div class="search_box pull-left">
@@ -49,7 +49,7 @@
             <li class="gnb_li"><a href="{home_url}/list.php?bbs_type=notice" class="gnb_li_a">COMMUNITY
                 <ul class="sub_ul sub_ul2">
                     <li class="sub_li"><a href="{home_url}/list.php?bbs_type=notice" class="sub_li_a">공지사항</a></li>
-                    <li class="sub_li"><a href="#" class="sub_li_a">이벤트</a></li>
+                    <li class="sub_li"><a href="{home_url}/list.php?bbs_type=event" class="sub_li_a">이벤트</a></li>
                     <li class="sub_li"><a href="#" class="sub_li_a">생활정보</a></li>
                     <li class="sub_li"><a href="#" class="sub_li_a">대리점 멤버십</a></li>
                 </ul>
